<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlayerActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                style="?attr/toolbarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                app:title="Custom Surface Rendering" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="36dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <com.theoplayer.android.api.THEOplayerView
                android:id="@+id/theoPlayerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:foreground="@drawable/player_border"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/customSurfaceViewContainer"
                app:layout_constraintVertical_weight="1" />

            <Button
                android:id="@+id/btn_set_surface_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/surfaceview"
                android:padding="2dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/theoPlayerView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_set_texture_view"
                app:layout_constraintHorizontal_chainStyle="spread"/>

            <Button
                android:id="@+id/btn_set_texture_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/textureview"
                android:padding="2dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/theoPlayerView"
                app:layout_constraintStart_toEndOf="@id/btn_set_surface_view"
                app:layout_constraintEnd_toStartOf="@id/btn_set_surface_control"/>

            <Button
                android:id="@+id/btn_set_surface_control"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/surfacecontrol"
                android:padding="2dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/theoPlayerView"
                app:layout_constraintStart_toEndOf="@id/btn_set_texture_view"
                app:layout_constraintEnd_toEndOf="parent"/>

            <FrameLayout
                android:id="@+id/customSurfaceViewContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:foreground="@drawable/player_border"
                app:layout_constraintTop_toBottomOf="@id/theoPlayerView"
                app:layout_constraintBottom_toTopOf="@id/customTextureViewContainer"
                app:layout_constraintVertical_weight="1"
                android:background="#000000" />

            <Button
                android:id="@+id/btn_set_custom_surface_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/customSurfaceViewContainer"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/custom_surfaceview" />

            <FrameLayout
                android:id="@+id/customTextureViewContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:foreground="@drawable/player_border"
                app:layout_constraintTop_toBottomOf="@id/customSurfaceViewContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_weight="1"
                android:background="#000000" />

            <Button
                android:id="@+id/btn_set_custom_texture_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/customTextureViewContainer"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/custom_textureview" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
